# jessepinkman9900.github.io

./: .pre-commit-config.yaml  CNAME  README.md  _config.yml  about.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: deploy.yaml
_data/: navigation.yml
_posts/: 2020-11-14-Conda.md
about/: index.html
docs/: about.md  index.md
docs/posts/: 2020-11-14-HowToShareASecret.md
posts/2020-11-14-Conda/: index.html
posts/2020-11-14-HowToShareASecret/: index.html
search/: search_index.json
