[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["jessepinkman9900 <srinivas@neobase.one>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-simple-blog = "^0.0.9"
ruff = "^0.4.7"
pymdown-extensions = "^10.8.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
